# video_ai_telemetry

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: API.md  ARCHITECTURE.md  COMPARISON.md  EXAMPLES.md
src/avatar_otel/: __init__.py  _registry.py  config.py
src/avatar_otel/conventions/: __init__.py  attributes.py
src/avatar_otel/exporters/: setup.py
src/avatar_otel/instrumentation/: eventloop.py  gpu.py  pytorch.py  transport.py
src/avatar_otel/logging/: api.py  scrubber.py
src/avatar_otel/metrics/: aggregator.py  av_sync.py
src/avatar_otel/tracing/: pending.py  pipeline.py  propagation.py
src/modaltrace/: __init__.py  _registry.py  _version.py  config.py
src/modaltrace/conventions/: __init__.py  attributes.py  namespaces.py
src/modaltrace/dashboard/: __init__.py  __main__.py  proto_parser.py  server.py  store.py
src/modaltrace/dashboard/static/: index.html
src/modaltrace/exporters/: setup.py
src/modaltrace/instrumentation/: eventloop.py  gpu.py  pytorch.py  transport.py
src/modaltrace/logging/: api.py  scrubber.py
src/modaltrace/metrics/: aggregator.py  av_sync.py  instruments.py
src/modaltrace/tracing/: pending.py  pipeline.py  propagation.py  sampler.py
src/video_ai_telemetry/: __init__.py  _registry.py  config.py
src/video_ai_telemetry/conventions/: __init__.py  attributes.py
src/video_ai_telemetry/exporters/: setup.py
src/video_ai_telemetry/instrumentation/: eventloop.py  gpu.py  pytorch.py  transport.py
src/video_ai_telemetry/logging/: api.py  scrubber.py
src/video_ai_telemetry/metrics/: aggregator.py  av_sync.py  instruments.py
src/video_ai_telemetry/tracing/: pending.py  pipeline.py  propagation.py  sampler.py
tests/: conftest.py  test_aggregator.py  test_av_sync.py  test_dashboard_api.py  test_dashboard_frontend_data.py  test_dashboard_proto_parser.py  test_dashboard_store.py  test_eventloop.py  test_gpu_monitor.py  test_logging_api.py  test_pending_spans.py  test_pipeline.py  test_propagation.py  test_pytorch_instrumentation.py  test_sampler.py  test_scrubber.py  test_threading_safety.py  test_transport.py
wiki/: Configuration.md  FAQ.md  Getting-Started.md  Home.md  README.md
