[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "modaltrace"
dynamic = ["version"]
requires-python = ">=3.10"
description = "OpenTelemetry observability library for real-time AI applications"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Arnab Dey", email = "arnab.dey@polimi.it" }
]
keywords = [
    "observability",
    "opentelemetry",
    "tracing",
    "metrics",
    "logging",
    "ai",
    "video",
    "pytorch",
    "gpu",
    "performance-monitoring"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "wrapt>=1.16.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
pytorch = ["torch>=2.0.0"]
gpu = ["pynvml>=11.5.0"]
webrtc = ["aiortc>=1.9.0"]
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.26.0",
]
all = ["modaltrace[pytorch,gpu,webrtc,dashboard]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

[project.urls]
"Homepage" = "https://github.com/arnabdeypolimi/video_ai_telemetry"
"Documentation" = "https://github.com/arnabdeypolimi/video_ai_telemetry/wiki"
"Repository" = "https://github.com/arnabdeypolimi/video_ai_telemetry.git"
"Bug Tracker" = "https://github.com/arnabdeypolimi/video_ai_telemetry/issues"
"Changelog" = "https://github.com/arnabdeypolimi/video_ai_telemetry/releases"

[dependency-groups]
dev = ["modaltrace[dev,all]"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/modaltrace"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=modaltrace --cov-report=term-missing -q"
